# edge-earclip

./: .gitignore  CLAUDE.md  README.md  RELAY_IBI_DEBUG_HANDOFF.md  TODO.md  index.html
.github/workflows/: build-release-firmware.yml  dashboard-build.yml  dashboard-deploy.yml  firmware-build.yml
EDGE/EDGE DASHBOARD/: narbis_edge_hrv_v13_27.html
EDGE/EDGE FIRMWARE/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
EDGE/EDGE FIRMWARE/components/narbis_protocol/: CMakeLists.txt
EDGE/EDGE FIRMWARE/main/: CMakeLists.txt  main.c
EDGE/EDGE OTA/: index (10).html
dashboard/: .env.example  COHERENCE_ENGINE_HANDOFF.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  plotly-dist-min.d.ts  vite-env.d.ts
dashboard/src/audio/: chime.ts
dashboard/src/auth/: AuthButton.tsx  (+2 more)
dashboard/supabase/: schema.sql
docs/: bluetooth-protocol.md  cloud-setup.md  coherence-algorithm-reference.md  coherence-engine.md  decisions.md  package.json  pairing.md  path-b-implementation-brief.md  path-b-relay-handoff.md  protocol.md  render.mjs
edge-additions/: Kconfig.additions  README.md  main_changes.md  sdkconfig.additions
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/narbis_protocol/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_state.c  app_state.h  auto_pair.c  auto_pair.h  ble_ota.c  ble_ota.h  ble_service_battery.c  ble_service_battery.h  ble_service_dis.c  ble_service_dis.h  ble_service_hrs.c  ble_service_hrs.h  ble_service_narbis.c  ble_service_narbis.h  config_manager.c  config_manager.h  diagnostics.c  diagnostics.h  main.c  power_mgmt.c  power_mgmt.h  sleep_button.c  sleep_button.h  test_inject.c  test_inject.h  transport_ble.c  transport_ble.h  transport_espnow.c  transport_espnow.h
firmware/test/: README.md
ota-additions/: README.md  device_config.js  device_selector.html  firmware_validator.js  integration_guide.md  version_display.js
protocol/: .gitignore  check_sync.py  generate_uuids.py  narbis_protocol.c  narbis_protocol.h  narbis_protocol.ts  uuids.ts
protocol/test/: Makefile  golden_packets.txt  roundtrip.c  roundtrip.ts
staged-prompts/: 01_protocol.md  02_firmware_skeleton.md  03_firmware_ppg_driver.md  04_firmware_dsp.md  05_firmware_espnow.md  06_firmware_ble.md  07_firmware_config_power.md  08_firmware_ota.md  09_dashboard_skeleton.md  10_dashboard_ble.md  11_dashboard_charts.md  12_dashboard_config.md  13_dashboard_recording.md  14_edge_additions.md  15_ota_additions.md  README.md
webapp/ota/: README.md  index.html
(+147 files in other folders)
